# conveyors

./: .gitattributes  camera_free.gd  export_presets.cfg  icon.svg.import  main.gd  main.tscn  project.godot
cpp/: CMakeLists.txt
cpp/src/engine/: CMakeLists.txt
cpp/src/engine/src/factory/: Factory.cc  Factory.hh
cpp/src/engine/src/godot/: LineGodot.cc  LineGodot.hh  ManagerGodot.cc  ManagerGodot.hh  register_types.cc  register_types.hh
cpp/src/engine/src/grid/: Grid.cc  Grid.hh  Position.hh
cpp/src/engine/src/line/: Bridge.cc  Bridge.hh  Line.cc  Line.hh  Merger.cc  Merger.hh  Sorter.cc  Sorter.hh  Splitter.cc  Splitter.hh
cpp/src/engine/src/line/connector/: Connector.cc  Connector.hh
cpp/src/engine/src/stats/: Statistics.hh
cpp/src/engine/src/utils/: line_handler.cc  line_handler.hh  smart_list.hh
gdextension/: engine.gdextension
modles/: box-small.glb.import  box-small.tres  conveyor.glb.import  conveyor.tres
modles/structure/: floor-large.tres  structure-corner-inner.glb.import  structure-corner-outer.glb.import  structure-doorway.tres  structure-wall.tres  structure-window.tres
scenes/lines/: line.gd  line.tscn
scenes/modules/: merger.tscn  sorter.gd  sorter.tscn  splitter.gd  splitter.tscn
